--- a/force-app/main/default/classes/RecordFormCtrl.cls
+++ b/force-app/main/default/classes/RecordFormCtrl.cls
@@ -1,14 +1,15 @@
 public with sharing class RecordFormCtrl {
 
-    @AuraEnabled(cacheable=false)
+    @AuraEnabled(cacheable=true)
     public static List<String> getFieldsFromFieldSet(String objectName, String fieldSet) {
         List<String> result = new List<String>();
 
-        for(FieldSetMember field : fflib_SObjectDescribe.getDescribe(objectName).getDescribe()
-                                                    .fieldSets.getMap().get(fieldSet).getFields()) {
-            result.add(objectName + '.' + field.getFieldPath());
+        for(FieldSetMember field : fflib_SObjectDescribe.getDescribe(objectName)
+                                                        .getDescribe()
+                                                        .fieldSets.getMap()
+                                                        .get(fieldSet).getFields()) {
+            result.add(field.getFieldPath());
         }
-System.debug(LoggingLevel.ERROR, result);
 
         return result;
     }
