--- a/force-app/main/default/classes/RecordFormCtrl.cls
+++ b/force-app/main/default/classes/RecordFormCtrl.cls
@@ -1,16 +1,23 @@
 public with sharing class RecordFormCtrl {
 
     @AuraEnabled(cacheable=true)
-    public static List<String> getFieldsFromFieldSet(String objectName, String fieldSet) {
+    public static List<String> getFieldsFromFieldSet(Id recordId, String fieldSet) {
         List<String> result = new List<String>();
 
-        for(FieldSetMember field : fflib_SObjectDescribe.getDescribe(objectName)
-                                                        .getDescribe()
-                                                        .fieldSets.getMap()
-                                                        .get(fieldSet).getFields()) {
-            result.add(field.getFieldPath());
-        }
+        String objectName = getSObjectName(recordId);
 
+        for(FieldSetMember field : fflib_SObjectDescribe.getDescribe(objectName).getDescribe()
+                                                                                    .fieldSets.getMap()
+                                                                                    .get(fieldSet).getFields()) {
+            result.add( field.getFieldPath() );
+        }
+        
         return result;
+    }
+
+
+    @AuraEnabled(cacheable=true)
+    public static String getSObjectName(Id recordId) {
+        return '' + recordId.getSobjectType();
     }
 }
