Finalized Custom Fieldset Edit Recipe

--- a/force-app/main/default/classes/RecordFormCtrl.cls
+++ b/force-app/main/default/classes/RecordFormCtrl.cls
@@ -1,10 +1,8 @@
 public with sharing class RecordFormCtrl {
 
     @AuraEnabled(cacheable=true)
-    public static List<String> getFieldsFromFieldSet(Id recordId, String fieldSet) {
+    public static List<String> getFieldsFromFieldSet(String objectName, String fieldSet) {
         List<String> result = new List<String>();
-
-        String objectName = getSObjectName(recordId);
 
         for(FieldSetMember field : fflib_SObjectDescribe.getDescribe(objectName).getDescribe()
                                                                                     .fieldSets.getMap()
@@ -13,11 +11,5 @@ public with sharing class RecordFormCtrl {
         }
         
         return result;
-    }
-
-
-    @AuraEnabled(cacheable=true)
-    public static String getSObjectName(Id recordId) {
-        return '' + recordId.getSobjectType();
     }
 }
