SObjectDataLoader Attachment Fix

--- a/force-app/main/domainbuilder/classes/Random.cls
+++ b/force-app/main/domainbuilder/classes/Random.cls
@@ -45,4 +45,9 @@ public class Random {
 	public Object value(List<Object> values) {
 		return values.get(integer(values.size()-1));
 	}
+
+	
+	public Blob blob() {
+		return Blob.valueOf(string(80));
+	}
 }
