--- a/force-app/main/default/classes/SObjectDataLoader_Test.cls
+++ b/force-app/main/default/classes/SObjectDataLoader_Test.cls
@@ -1,6 +1,7 @@
 @IsTest
 private class SObjectDataLoader_Test {
     
+    // Reproduce issue https://github.com/afawcett/apex-sobjectdataloader/issues/18
     @IsTest
     private static void cloneAttachments() {
 
