--- a/force-app/main/apex-chainable/classes/ChainableSchedulable.cls
+++ b/force-app/main/apex-chainable/classes/ChainableSchedulable.cls
@@ -14,8 +14,8 @@ public abstract class ChainableSchedulable extends Chainable
     }
 
 
-    public override void executeAsynchronously() {
-        System.schedule(name(), cronExpression(), this);
+    public override Id executeAsynchronously() {
+        return System.schedule(name(), cronExpression(), this);
     }
 
 
