--- a/force-app/main/apex-chainable/classes/SampleQueueable.cls
+++ b/force-app/main/apex-chainable/classes/SampleQueueable.cls
@@ -1,4 +1,4 @@
-public class SampleQueueable extends ChainableQueueable {
+public with sharing class SampleQueueable extends ChainableQueueable {
 
 	protected override void execute(Context ctx) {
 		Chainable_Test.log(this);
