--- a/force-app/main/apex-chainable/classes/Chainable.cls
+++ b/force-app/main/apex-chainable/classes/Chainable.cls
@@ -57,7 +57,7 @@ public abstract class Chainable {
     }
 
 
-	public static List<Id> jobIds() {
+	public List<Id> jobIds() {
 		return jobIds;
 	}
 
