--- a/force-app/main/default/classes/MultiCommitCtrl.cls
+++ b/force-app/main/default/classes/MultiCommitCtrl.cls
@@ -2,8 +2,7 @@ public with sharing class MultiCommitCtrl {
 
     // PUBLIC
 
-    @AuraEnabled
-    public static void startFlow(){
+    public void startFlow(){
         try {
             new Flow.Interview.MultiCommit( new Map<String, Object>() ).start();
         }
