--- a/force-app/main/default/classes/BroadcastNotifications.cls
+++ b/force-app/main/default/classes/BroadcastNotifications.cls
@@ -16,9 +16,11 @@ public with sharing class BroadcastNotifications {
         List<NotificationReceived__e> result = new List<NotificationReceived__e>();
 
         for(Notification__c notification : notifications) {
-            result.add( new NotificationReceived__e(ext_JobId__c = '1234', txt_Status__c = notification.txt_Status__c) );
+            result.add( new NotificationReceived__e(ext_JobId__c = notification.ext_JobId__c,
+                                                    txt_JobName__c =  notification.txt_JobName__c,
+                                                    txt_Status__c = notification.txt_Status__c) );
         }
-
+System.debug(LoggingLevel.ERROR, 'Publish ' + result);
         EventBus.publish(result);
     }
 }
