--- a/force-app/main/default/classes/MultiCommitCtrl.cls
+++ b/force-app/main/default/classes/MultiCommitCtrl.cls
@@ -23,6 +23,11 @@ public with sharing class MultiCommitCtrl {
         return result;
     }
 
+    @AuraEnabled(cacheable=true)
+    public static String getSessionId() {
+        return UserInfo.getSessionId();
+    }
+
 
     // PRIVATE
 
