--- a/force-app/main/default/classes/TestsSelector.cls
+++ b/force-app/main/default/classes/TestsSelector.cls
@@ -6,7 +6,8 @@ public class TestsSelector extends fflib_SObjectSelector {
 			Test__c.Name,
 			Test__c.Type__c,
 			Test__c.AcceptanceCriteria__c,
-            Test__c.txl_Payload__c
+            Test__c.txl_Payload__c,
+			Test__c.pkl_Status__c
 		};
 	}
 
